syntax = "proto3";

package services;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 2;
}

service HelloService {
  rpc  SayHello(HelloRequest)  returns (HelloReply);
}
